# llvm_custom_pass

./: .gitignore
AddConst/: CMakeLists.txt
AddConst/examples/: foo.ll
AddConst/include/: AddConst.h
AddConst/lib/: AddConstAnalysis.cpp  AddConstPlugin.cpp  CMakeLists.txt
CustPass/: CMakeLists.txt
CustPass/example/: ex.ll
CustPass/include/: CustPass.h
CustPass/lib/: CMakeLists.txt  CustPassAnalysis.cpp  CustPassPlugin.cpp
SubConst/: CMakeLists.txt
SubConst/example/: ex.ll
SubConst/include/: SubConst.h
SubConst/lib/: CMakeLists.txt  SubConstAnalysis.cpp  SubConstPlugin.cpp
SubConstTransform/: CMakeLists.txt
SubConstTransform/example/: ex.ll  output.ll
SubConstTransform/include/: SubConstTransform.h
SubConstTransform/lib/: CMakeLists.txt  SubConstTransformAnalysis.cpp  SubConstTransformAnalysisPlugin.cpp  SubConstTransformPass.cpp
